--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "laravel/framework": "^8.70"
   },
   "require-dev": {
+    "nunomaduro/collision": "^5.10",
     "orchestra/testbench": "^6.23"
   },
   "autoload": {
