--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,10 +12,11 @@ jobs:
       # Specify the version you desire here
       - image: circleci/php:8.0
 
-      # Add steps to the job
-      # See: https://circleci.com/docs/2.0/configuration-reference/#steps
-    steps:
-    
+    # Add steps to the job
+    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+    step:
+      - checkout
+
       - run: sudo apt update # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
       - run: sudo docker-php-ext-install zip
 
@@ -37,3 +38,4 @@ jobs:
 
       # run tests with phpunit
       - run: ./vendor/bin/phpunit
+      
